Fix errorprune errors (#99)