@@ -143,17 +143,16 @@ public class ForkChoiceIntegrationTest {
     }
   }
 
-  private static ForkChoiceTestStep getStepKind(Map<String, Object> ss) {
-    return ss.keySet().stream()
-        .map(ForkChoiceTestStep::valueOf)
-        .collect(Collectors.toList())
-        .get(0);
+  private static ForkChoiceTestStep getStepKind(final Map<String, Object> ss) {
+    return ss.keySet().stream().map(ForkChoiceTestStep::valueOf).toList().get(0);
   }
 
   private static <T extends SszData> T resolvePart(
-      Class<T> clazz, SszSchema<? extends T> type, File testFile, Object value) {
-    if (value instanceof String) {
-      String path = (String) value;
+      final Class<T> clazz,
+      final SszSchema<? extends T> type,
+      final File testFile,
+      final Object value) {
+    if (value instanceof String path) {
       if (path.endsWith(".yaml") || path.endsWith(".ssz")) {
         Path partPath = Paths.get(testFile.getParentFile().getParent(), "cache", path);
         try {
@@ -218,9 +217,9 @@ public class ForkChoiceIntegrationTest {
         if (!processAttestation(forkChoice, (Attestation) step)) {
           attestationBuffer.add((Attestation) step);
         }
-      } else if (step instanceof Map) {
+      } else if (step instanceof Map<?, ?> rawChecks) {
         @SuppressWarnings("unchecked")
-        Map<String, Object> checks = (Map<String, Object>) step;
+        Map<String, Object> checks = (Map<String, Object>) rawChecks;
         for (Map.Entry<String, Object> e : checks.entrySet()) {
           String check = e.getKey();
           switch (check) {
